# Blog-fast

blog-back/: pyproject.toml
blog-back/api/: database.py  main.py  models.py
nextjs/: package-lock.json  package.json
nextjs/src/app/: globals.css  layout.tsx  page.tsx
nextjs/src/app/(dashboard)/dashboard/: layout.tsx
nextjs/src/app/(dashboard)/dashboard/Analytics/: page.tsx
nextjs/src/app/(dashboard)/dashboard/Users/: page.tsx
nextjs/src/app/(dashboard)/dashboard/Users/[id]/: page.tsx
nextjs/src/app/(root)/: layout.tsx  root.css
nextjs/src/app/(root)/about/: page.tsx
nextjs/src/app/(root)/post/[slug]/: page.tsx
nextjs/src/components/: post.tsx  posts.tsx
nextjs/src/components/ui/: card.tsx  footer.tsx  navigation-menu.tsx
