[project]
name = "blog-back"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "bcrypt>=4.3.0",
    "black>=26.5.1",
    "email-validator>=2.3.0",
    "fastapi[standard]>=0.136.3",
    "httpx>=0.28.1",
    "jose>=1.0.0",
    "passlib>=1.7.4",
    "psycopg2-binary>=2.9.12",
    "pyjwt>=2.13.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "python-dotenv>=1.2.2",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.30",
    "ruff>=0.15.15",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0.50",
]
